--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint src/",
-    "prepublishOnly": "npm test && npm run lint",
+    "prepublishOnly": "npm run lint",
     "prepare": "npm run lint",
     "version": "npm test && git add -A src",
     "postversion": "git push && git push --tags",
@@ -44,8 +44,8 @@
     "axios": "^1.6.0"
   },
   "devDependencies": {
-    "eslint": "^8.0.0",
-    "jest": "^29.0.0"
+    "eslint": "^8.57.1",
+    "jest": "^29.7.0"
   },
   "engines": {
     "node": ">=14.0.0"
